err/gestionatr.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/gestionatr'...
Compiling './lib/python3.5/site-packages/gestionatr/cli.py'...
***   File "./lib/python3.5/site-packages/gestionatr/cli.py", line 35
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gestionatr/data'...
Listing './lib/python3.5/site-packages/gestionatr/helpers'...
Listing './lib/python3.5/site-packages/gestionatr/input'...
Listing './lib/python3.5/site-packages/gestionatr/input/messages'...
Compiling './lib/python3.5/site-packages/gestionatr/input/messages/message.py'...
***   File "./lib/python3.5/site-packages/gestionatr/input/messages/message.py", line 224
    except except_f1, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gestionatr/output'...
Listing './lib/python3.5/site-packages/gestionatr/output/messages'...
Listing './lib/python3.5/site-packages/gestionatr-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/libComXML-3.1.0.egg-info'...
Listing './lib/python3.5/site-packages/libcomxml'...
Listing './lib/python3.5/site-packages/libcomxml/core'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/__init__.py'...
Listing './lib/python3.5/site-packages/workdays-1.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
